--- a/workflow-templates/openshift-deploy.yml
+++ b/workflow-templates/openshift-deploy.yml
@@ -1,4 +1,10 @@
 # This is a starter workflow to help you get started with deploying on OpenShift using Actions
+
+# Required Secrets:
+#    SERVICE_USER
+#    SERVER_URL
+#    SERVICE_TOKEN
+
 name: OpenShift Deployment
 on:
   # Triggers the workflow on push or pull request events but only for the default branch
