Add required secrets to top of sonar starter

--- a/workflow-templates/sonarcloud.yml
+++ b/workflow-templates/sonarcloud.yml
@@ -1,4 +1,8 @@
 # This is a starter workflow to help get you started with SonarCloud Scanning
+
+# Required Secrets:
+#   SONAR_TOKEN
+
 name: SonarCould Scan
 on:
 
