Add 'needs' dependency

--- a/workflow-templates/cloudformation.yml
+++ b/workflow-templates/cloudformation.yml
@@ -97,6 +97,9 @@ jobs:
     runs-on: ubuntu-latest
     environment: DEVELOPMENT
     
+    # The needs parameter ensures that the teardown job will run after the deploy job
+    needs: [deploy]
+    
     # Explicitly set permissions for the $GITHUB_TOKEN that the workflow uses
     permissions:
       
