--- a/workflow-templates/jfrog-deploy.yml
+++ b/workflow-templates/jfrog-deploy.yml
@@ -58,7 +58,7 @@ jobs:
         run: npm install
 
       # Build Project
-      - name: Install MBT build tool
+      - name: Build Artifact
         run: npm build
 
       # The following three steps are Example JFrog steps for connecting to JFrog and uploading the build artifact
