--- a/workflow-templates/dependabot-to-confluence.yml
+++ b/workflow-templates/dependabot-to-confluence.yml
@@ -1,12 +1,13 @@
 # This is a starter workflow to help you get started with publishing Dependabot Alerts to Confluence using Actions
+# In order to use this workflow, please request that the DevOps team add the DevOps-DependAlert app to your repository.
 
 # Required Secrets:
 # sphinx_confluence_space
 # sphinx_srvc_user
 # sphinx_srvc_key
 
-# Optional Secrets:
-# sphinx_parent_page
+# Required GitHub App:
+# DevOps-DependAlert
 
 name: DependAlert User
 on: [pull_request]
@@ -17,11 +18,11 @@ jobs:
 
     uses: oneTakeda/devops-dependabot-action/.github/workflows/dependalert.yaml@0.6b1
     with:
-        sphinx_confluence_space: "YOURSPACE"
-        sphinx_srvc_user: "you@takeda.com"
+        sphinx_confluence_space: "YOURSPACE"             # The name of your Confluence Spave
+        sphinx_srvc_user: "you@takeda.com"               # The email of the user to publish to confluence
         # sphinx_parent_page: "Confluence Parent Page"   # OPTIONAL
         # alerts_title_override: "Sample Page Title"     # OPTIONAL
     secrets:
-        gh_app_id: ${{ secrets.DEPEND_ALERT_GH_APP_ID }}
-        gh_app_key: ${{ secrets.DEPEND_ALERT_GH_APP_PRIVATE_KEY }}
-        sphinx_srvc_key: ${{ secrets.SPHINX_SRVC_KEY }}   # atlassian key for you@takeda.com
+        gh_app_id: ${{ secrets.DEPEND_ALERT_GH_APP_ID }}              # Do not touch this
+        gh_app_key: ${{ secrets.DEPEND_ALERT_GH_APP_PRIVATE_KEY }}    # Do not touch this
+        sphinx_srvc_key: ${{ secrets.SPHINX_SRVC_KEY }}   # Atlassian key for user from "sphinx_srvc_user" above.
