--- a/workflow-templates/docker-build-and-push.yml
+++ b/workflow-templates/docker-build-and-push.yml
@@ -26,12 +26,12 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3       
+      - uses: actions/checkout@v4
 
       # Log in to the Docker Registry
       # Be sure to update with your project's actual registry replacing "EXAMPLE"
       - name: Login to JFrog Artifactory
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           registry: takedaawsuseast-EXAMPLE-docker-local.jfrog.io
           username: ${{ secrets.JFROG_USER }}
@@ -40,9 +40,9 @@ jobs:
       # Build and Push the Image
       # Be sure to update with your project's actual naming replacing "EXAMPLE"
       - name: Build and push Docker Image
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5
         with:
          context: .
-         push: true
+         push: ${{ github.event_name != 'pull_request' }}
          file: ./path/to/Dockerfile
-         tags: takedaawsuseast-EXAMPLE-docker-local.jfrog.io/EXAMPLE-docker-local/EXAMPLE:${{ github.ref_name }}
+         tags: takedaawsuseast-EXAMPLE-docker-local.jfrog.io/EXAMPLE-docker-local/EXAMPLE:${{ github.event_name == 'pull_request' && github.head_ref || github.ref_name }}
