--- a/workflow-templates/jfrog-deploy.yml
+++ b/workflow-templates/jfrog-deploy.yml
@@ -1,6 +1,6 @@
 # This is a starter workflow to help you get started with uploading JFrog Artifacts using Actions
 
-# Required Secrets:
+# Required Variables & Secrets:
 # JFROG_USER
 # JFROG_PASSWORD
 
@@ -17,7 +17,7 @@ on:
 
 # This is a starter workflow to help you get started with uploading JFrog Artifacts using Actions
 
-# Required Secrets:
+# Required Variables & Secrets:
 #    JFROG_USER
 #    JFROG_PASSWORD
 
@@ -69,7 +69,7 @@ jobs:
 
       # Configure JFrog Credentials
       - name: Setup JFrog Credentials
-        run: jfrog config add --artifactory-url=${{ env.JFROG_URL }} --user='${{ secrets.JFROG_USER }}' --password='${{ secrets.JFROG_PASSWORD }}'
+        run: jfrog config add --artifactory-url=${{ env.JFROG_URL }} --user='${{ vars.JFROG_USER }}' --password='${{ secrets.JFROG_PASSWORD }}'
       
       # Upload artifacts
       - name: Upload JFrog Artifacts
