--- a/workflow-templates/jfrog-build-and-push-helm-charts.yml
+++ b/workflow-templates/jfrog-build-and-push-helm-charts.yml
@@ -38,14 +38,14 @@ jobs:
       - name: Setup JFrog CLI and login registry
         uses: jfrog/setup-jfrog-cli@v4
       - run: |
-          jf c add --artifactory-url=https://takedaawsuseast.jfrog.io/artifactory --user='${{ vars.JFROG_REPO_USER }}' --password='${{ secrets.JFROG_REPO_TOKEN }}'
+          jf c add --artifactory-url=${{ vars.JFROG_URL }}/artifactory --user='${{ vars.JFROG_REPO_USER }}' --password='${{ secrets.JFROG_REPO_TOKEN }}'
           jf rt ping
       # Upload/push Helm chart to JFrog
-      # REMEMBER to create or request access to Jfrog Helm repo then replace JFrog application name appropriately (JFROG_ARTIFACT_DIR) and version.
+      # REMEMBER to create or request access to Jfrog Helm repo then replace JFrog application name appropriately (JFROG_REPO_NAME) and version.
       # Be sure to update with your project's actual naming replacing "CHART_NAME"
       # e.g. jf rt u my-helm-chart-1.0.0.tgz sample-helm-local/$GITHUB_RUN_ID/
       - name: Upload/push Helm chart to JFrog Artifactory
         shell: bash
         run: |
-          jf rt u <CHART_NAME-package_version>.tgz <JFROG_ARTIFACT_DIR>/<path-to-upload-dir>/ 
+          jf rt u <CHART_NAME-package_version>.tgz <JFROG_REPO_NAME>/<CHART_NAME>/
           
