--- a/workflow-templates/jfrog-build-and-push-helm-charts.yml
+++ b/workflow-templates/jfrog-build-and-push-helm-charts.yml
@@ -37,13 +37,13 @@ jobs:
       # Setup JFrog CLI and login to the JFrog Artifactory
       - name: Setup JFrog CLI and login registry
         uses: jfrog/setup-jfrog-cli@v4
-      - run: |
-          jf c add --artifactory-url=${{ vars.JFROG_URL }}/artifactory --user='${{ vars.JFROG_REPO_USER }}' --password='${{ secrets.JFROG_REPO_TOKEN }}'
-          jf rt ping
+        env:
+          JF_URL: ${{ vars.JFROG_URL }}
+          JF_ACCESS_TOKEN: ${{ secrets.JFROG_REPO_TOKEN }}
       # Upload/push Helm chart to JFrog
       # REMEMBER to create or request access to Jfrog Helm repo then replace JFrog application name appropriately (JFROG_REPO_NAME) and version.
       # Be sure to update with your project's actual naming replacing "CHART_NAME"
-      # e.g. jf rt u my-helm-chart-1.0.0.tgz sample-helm-local/$GITHUB_RUN_ID/
+      # e.g. jf rt u my-helm-chart-1.0.0.tgz sample-helm-local/my-helm-chart-1.0.0/
       - name: Upload/push Helm chart to JFrog Artifactory
         shell: bash
         run: |
