--- a/workflow-templates/jfrog-build-and-push-helm-charts.yml
+++ b/workflow-templates/jfrog-build-and-push-helm-charts.yml
@@ -1,9 +1,8 @@
 # This is a starter workflow to help you get started with building Helm Charts using Actions.
 # Make sure you already have the access the repo or request its creation through devops-repo-automation repo.
 
-# Required Variables & Secrets:
-# JFROG_REPO_USER
-# JFROG_REPO_TOKEN
+# Assumes your GitHub Repository already has JFrog OIDC identity mapping setup correctly
+# See https://mytakeda.sharepoint.com/sites/DevOps/SitePages/JFrog-Artifactory-Guide.aspx
 
 name: Build and Push Helm Chart
 # Controls when the workflow will run
@@ -20,26 +19,36 @@ jobs:
   build-and-push:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    # Specifies the working directory where helm charts are located
+    # Token permissions required for JFrog OIDC authentication to work
+    permissions:
+      id-token: write
+      contents: read
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout code
         uses: actions/checkout@v4
+
       # This step installs Helm using the azure/setup-helm GitHub Action.
       - name: Install Helm
         uses: azure/setup-helm@v4.2.0
+
       # Create Helm package and push it to JFrog Helm repository
       # Indicate the helm chart folder and set the 'package_version'
       - name: Build Helm package
         shell: bash
         run: |
           helm package <./your/helm/folder> --version '<package_version>'
-      # Setup JFrog CLI and login to the JFrog Artifactory
-      - name: Setup JFrog CLI and login registry
+
+      # Setup JFrog CLI and authenticate to JFrog using OIDC
+      - name: Setup JFrog CLI
+        id: jfrog-auth
         uses: jfrog/setup-jfrog-cli@v4
         env:
-          JF_URL: ${{ vars.JFROG_URL }}
-          JF_ACCESS_TOKEN: ${{ secrets.JFROG_REPO_TOKEN }}
+          JF_URL: ${{ vars.JFROG_URL }} # Same for everyone and available to every repository
+        with:
+          oidc-provider-name: ${{ secrets.JFROG_OIDC_PROVIDER_NAME }} # Same for everyone and available to every repository
+          oidc-audience: ${{ secrets.JFROG_OIDC_AUDIENCE }} # Same for everyone and available to every repository
+
       # Upload/push Helm chart to JFrog
       # REMEMBER to create or request access to Jfrog Helm repo then replace JFrog application name appropriately (JFROG_REPO_NAME) and version.
       # Be sure to update with your project's actual naming replacing "CHART_NAME"
@@ -48,4 +57,13 @@ jobs:
         shell: bash
         run: |
           jf rt u <CHART_NAME-package_version>.tgz <JFROG_REPO_NAME>/<CHART_NAME>/
-          
+
+      # Publish Build Info into JFrog Artifactory
+      - name: Publish Build info With JFrog CLI
+        run: |
+          # Collect environment variables for the build
+          jf rt build-collect-env
+          # Collect VCS details from git and add them to the build
+          jf rt build-add-git
+          # Publish build info
+          jf rt build-publish
