--- a/workflow-templates/docker-build-and-push.yml
+++ b/workflow-templates/docker-build-and-push.yml
@@ -42,7 +42,7 @@ jobs:
       # Build the image
       # Be sure to update with your project's actual naming replacing "EXAMPLE" and update the context and file path
       # We recommend to update the tags with image name and version usage appropriately, SHA is just an example
-      - name: Build and push Docker Image
+      - name: Build Docker Image
         uses: docker/build-push-action@v6
         with:
          context: .
